# BaiduAI_Car

./: .gitignore  .gitignore.swp  README.md  完全模型硬件选型.xlsx
RT1064/Libraries/nxp_libraries/drives/: fsl_pwm.h
RT1064/Libraries/seekfree_libraries/: headfile.h  zf_pwm.h
RT1064/Libraries/seekfree_peripheral/: SEEKFREE_GPS_TAU1201.h
RT1064/Project/CODE/: common.c  common.h  debug.c  debug.h  encoder.c  encoder.h  gpio.c  gpio.h  icar.c  icar.h  motor.c  motor.h  pid.c  pid.h  servo.c  servo.h  timer_pit.c  timer_pit.h  uart1_usb.c  uart1_usb.h
RT1064/Project/MDK/: RT106X.uvguix.49075  RT106X.uvoptx  RT106X.uvprojx
RT1064/Project/MDK/Listings/: RT106X.map
RT1064/Project/MDK/Objects/: RT106X.axf  RT106X.build_log.htm  RT106X.htm  RT106X.lnp  RT106X_nor_sdram_zf_dtcm_v6.dep  board.d  button.d  clock.d  clock_config.d  common.d  common_1.d  cpu.d  cpu_cache.d  cpuport.d  debug.d  diskio.d  encoder.d  evkmimxrt1064_flexspi_nor_config.d  ff.d  ffsystem.d  filter.d  finsh_node.d  finsh_ops.d  finsh_parser.d  finsh_token.d  finsh_var.d  fsl_adc_etc.d  fsl_bee.d  fsl_dcdc.d  fsl_debug_console.d  fsl_dmamux.d  fsl_enc.d  fsl_flexcan.d  fsl_flexio_camera.d  fsl_flexio_i2c_master.d  fsl_flexio_spi.d  fsl_flexio_spi_edma.d  fsl_flexio_uart.d  fsl_flexram.d  fsl_gpt.d  (+92 more)
RT1064/Project/USER/inc/: RT106X_config.h
RT1064/Project/USER/src/: isr.c  main.c
edgeboard/: CMakeLists.txt  demo.cpp
edgeboard/log/: latest_list
edgeboard/src/: CMakeLists.txt
edgeboard/src/config/: config.json
edgeboard/src/include/: common.hpp  detection.hpp  uart.hpp
edgeboard/src/src/: controlcenter.cpp  icar.cpp  motion.cpp  preprocess.cpp
edgeboard/src/src/detection/: danger.cpp  parking.cpp  racing.cpp  rescue.cpp
edgeboard/src/src/recognition/: crossroad.cpp  ring.cpp  tracking.cpp
edgeboard/src/tool/: collection.cpp
rt1064/Libraries/seekfree_libraries/: headfile.h  zf_pwm.c
rt1064/Libraries/seekfree_peripheral/: SEEKFREE_BLUETOOTH_CH9141.c
rt1064/Project/: RT1064智能车推荐引脚分配.txt
rt1064/Project/CODE/: display.c  display.h  encoder.c  filter.c  filter.h  motor.c  motor.h  servo.c  servo.h  timer_pit.c
rt1064/Project/MDK/: RT106X.uvguix.49075  RT106X.uvoptx  RT106X.uvprojx
rt1064/Project/MDK/Listings/: RT106X.map
rt1064/Project/MDK/Objects/: RT106X.build_log.htm  RT106X.htm  RT106X.lnp  RT106X_nor_sdram_zf_dtcm_v6.dep  board.d  button.d  buzzer.d  carmove.d  carmove2.d  cmd.d  components.d  device.d  display.d  encoder.d  evkmimxrt1064_sdram_ini_dcd.d  ffunicode.d  finsh_compiler.d  finsh_error.d  finsh_heap.d  finsh_init.d  finsh_vm.d  fsl_adc.d  fsl_aipstz.d  fsl_aoi.d  fsl_assert.d  fsl_cache.d  fsl_clock.d  fsl_cmp.d  fsl_common.d  fsl_csi.d  fsl_dcp.d  fsl_edma.d  fsl_elcdif.d  fsl_enet.d  fsl_ewm.d  fsl_flexio.d  fsl_flexio_i2s.d  fsl_flexio_i2s_edma.d  fsl_flexio_uart_edma.d  fsl_flexspi.d  (+67 more)
rt1064/Project/USER/src/: main.c
